Working slack and email service